--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/ESPAsyncWebServer"]
 	path = lib/ESPAsyncWebServer
 	url = https://github.com/me-no-dev/ESPAsyncWebServer
+[submodule "lib/AsyncTCP"]
+	path = lib/AsyncTCP
+	url = https://github.com/me-no-dev/AsyncTCP.git
