--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,7 @@ platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
 monitor_speed = 115200
-upload_speed = 115200
-board_build.flash_mode = dio
+#board_build.flash_mode = dio
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
