--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,6 @@ monitor_speed = 115200
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
+	-Wl,-zmuldefs
 lib_deps = 
 	lvgl/lvgl@^8.3.9
